Fixing memory leak in video reading

--- a/VisualInspector/VisualInspector.csproj
+++ b/VisualInspector/VisualInspector.csproj
@@ -27,7 +27,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Infrastructure\Converters\Converters.cs" />
     <Compile Include="ViewModels\EventViewModel.cs" />
     <Compile Include="Infrastructure\EventVisualFactory.cs" />
     <Compile Include="Infrastructure\EventVisualHost.cs" />
