--- a/VisualInspector/NLog.config
+++ b/VisualInspector/NLog.config
@@ -7,6 +7,6 @@
   </targets>
 
   <rules>
-	  <logger name="*" minlevel="Trace" writeTo="logfile" />
+	  <logger name="*" minlevel="Debug" writeTo="logfile" />
   </rules>
 </nlog>
