--- a/Foundation/Foundation.csproj
+++ b/Foundation/Foundation.csproj
@@ -52,10 +52,10 @@
     <Compile Include="MultiParameter.cs" />
     <Compile Include="ObservableNotifiableCollection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyChangeNotification.cs" />
     <Compile Include="PropertyNameProvider.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ValidationViewModel.cs" />
-    <Compile Include="ViewModel.cs" />
     <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
